# token-delegate

./: .gitignore  Anchor.toml  README.md
programs/token-delegate/: Cargo.toml
programs/token-delegate/src/: lib.rs
tests/: token-delegate.ts
