[package]
name = "token-delegate"
version = "1.0.0"
description = "Protocol to create multiple token delegates for SPL token accounts"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_delegate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-log-ix-name"]

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "1.8.5"
